Refactor trace view tabs to top navigation
- Move tab navigation from trace content area to page-level top nav
- Rename "details" tab to "events" and add new "overview" as default tab
- Rename _event_details partial to _events
- Update CSS classes from layout-area_* to events-tab_*
- Add --page-tabs variant for tab nav styling

--- a/app/assets/stylesheets/rails_observatory/components/tab_nav.css
+++ b/app/assets/stylesheets/rails_observatory/components/tab_nav.css
@@ -28,6 +28,11 @@
     }
   }
 
+  &.--page-tabs {
+    border-bottom: 0;
+    padding-inline: 0;
+  }
+
     /*& label:has(:focus) {*/
     /*  outline: -webkit-focus-ring-color auto 1px;*/
     /*}*/
