--- a/app/views/rails_observatory/request_traces/_recent_traces_page.html.erb
+++ b/app/views/rails_observatory/request_traces/_recent_traces_page.html.erb
@@ -2,7 +2,7 @@
   <%= render 'query_table', attributes: { id: 'recent-request-traces' }, events: @traces, fields: [
     :time, :http_method, :action, :route_pattern, :duration, :status,
   ], formatters: {
-    time: ->(time, trace) { link_to Time.at(time).to_fs('%H:%M:%S'), trace_by_type_path(trace.class.key_prefix, trace.id), data: { turbo_frame: '_top' } },
+    time: ->(time, trace) { link_to Time.at(time).to_fs('%H:%M:%S'), request_trace_path(trace.id), data: { turbo_frame: '_top' } },
     status: ->(status) do
       if status.to_s.start_with?(/[23]/)
         tag.span(status, class: 'status-badge success')
