--- a/app/views/rails_observatory/requests/index.html.erb
+++ b/app/views/rails_observatory/requests/index.html.erb
@@ -121,6 +121,6 @@
         </div>
       </div>
     </header>
-    <turbo-frame id="recent-traces" src="<%= recent_traces_by_type_path('rt') %>" loading="lazy"></turbo-frame>
+    <turbo-frame id="recent-traces" src="<%= recent_request_traces_path %>" loading="lazy"></turbo-frame>
   </section>
 </main>
