--- a/app/views/rails_observatory/request_traces/_jobs.html.erb
+++ b/app/views/rails_observatory/request_traces/_jobs.html.erb
@@ -1,13 +1,6 @@
 <div class="tab-content jobs">
-  <%
-    job_events = @trace.events.only('enqueue.active_job')
-                       .reject { |e| e.dig('payload', 'job', 'class') == 'ActionMailer::MailDeliveryJob' }
-  %>
   <ul class="simple-list">
-    <% if job_events.empty? %>
-      <li>No jobs were enqueued</li>
-    <% end %>
-    <% job_events.each do |event| %>
+    <% @trace.job_events.each do |event| %>
       <li>
         <div class="simple-list-title"><%= event.dig('payload', 'job', 'class') %></div>
         <div>
